--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -128,7 +128,7 @@
         android:fontFamily="monospace"
         android:textAppearance="?attr/textAppearanceBodySmall" />
 
-    <io.onepro.imuprobe.OrientationGlSurfaceView
+    <io.onepro.xrprobe.OrientationGlSurfaceView
         android:id="@+id/orientationView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
